# rustlite

./: .gitattributes  .gitignore  ARCHITECTURE.md  BRANDING.md  CODE_OF_CONDUCT.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  WORKSPACE.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
config/: Cargo.toml.backup  README.md
crates/rustlite-api/: Cargo.toml
crates/rustlite-api/examples/: aggregate_demo.rs  debug_logging_demo.rs  logging_demo.rs  persistent_demo.rs  query_demo.rs  relational_demo.rs  transaction_demo.rs
crates/rustlite-api/src/: lib.rs  logging.rs  security.rs
crates/rustlite-api/tests/: aggregate_tests.rs  ecommerce_tests.rs  join_tests.rs  query_tests.rs
crates/rustlite-core/: Cargo.toml
crates/rustlite-core/src/: error.rs  format_version.rs  index.rs  lib.rs  query.rs  storage.rs  transaction.rs  transaction_tests.rs
crates/rustlite-core/src/query/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  planner.rs
crates/rustlite-snapshot/: Cargo.toml
crates/rustlite-snapshot/src/: lib.rs  manager.rs
crates/rustlite-storage/: Cargo.toml
crates/rustlite-storage/src/: compaction.rs  lib.rs  manifest.rs  memtable.rs  sstable.rs
crates/rustlite-wal/: Cargo.toml
crates/rustlite-wal/src/: lib.rs  reader.rs  record.rs  recovery.rs  segment.rs  writer.rs
crates/rustlite-wal/tests/: integration.rs  recovery.rs
crates/rustlite-wal/tests/common/: mod.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FUZZING.md  LOGGING.md  README.md  V1_PRODUCTION_PLAN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_database_ops.rs  fuzz_key_value.rs  fuzz_query_parser.rs  fuzz_sstable_reader.rs  fuzz_wal_record.rs
hooks/: README.md  install-hooks.ps1
scripts/: generate-assets.ps1  generate-assets.sh
src/: error.rs  index.rs  lib.rs  query.rs  security.rs  storage.rs  transaction.rs  wal.rs
