[workspace]
resolver = "2"
members = [
    "crates/rustlite-core",
    "crates/rustlite-wal",
    "crates/rustlite-storage",
    "crates/rustlite-snapshot",
    "crates/rustlite-api",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Srikanth Aakuthota <virtumemailabs@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/VIRTUMEM-AI-LABS/rustlite"
homepage = "https://rustlite.dev"
documentation = "https://docs.rs/rustlite"
rust-version = "1.70.0"

[workspace.dependencies]
# Shared dependencies across workspace members
criterion = "0.5"
crc32fast = "1.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
