[package]
name = "rustlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "A lightweight, high-performance embedded database written in Rust with ACID guarantees"
readme = "../../README.md"
keywords = ["database", "embedded", "storage", "key-value", "sql"]
categories = ["database", "embedded", "data-structures"]

# Files to include in the published crate
include = [
    "../../README.md",
    "../../CHANGELOG.md",
    "../../CONTRIBUTING.md",
    "../../LICENSE",
    "../../assets/*",
    "src/**",
    "Cargo.toml",
]

[dependencies]
rustlite-core = { path = "../rustlite-core", version = "0.2.1" }
rustlite-wal = { path = "../rustlite-wal", version = "0.2.1" }
rustlite-storage = { path = "../rustlite-storage", version = "0.2.1" }
rustlite-snapshot = { path = "../rustlite-snapshot", version = "0.2.1" }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
