[package]
name = "rustlite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Core types and traits for RustLite embedded database"

[dependencies]
# Core dependencies will be added as development progresses

[dev-dependencies]
criterion.workspace = true
