[package]
name = "rustlite-snapshot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Snapshot and backup functionality for RustLite (internal implementation detail)"
keywords = ["database", "backup", "snapshot", "internal"]
categories = ["database"]

[dependencies]
rustlite-core = { path = "../rustlite-core", version = "0.3.0" }
rustlite-storage = { path = "../rustlite-storage", version = "0.3.0" }
serde.workspace = true
bincode.workspace = true
crc32fast.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
