[package]
name = "rustlite-wal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Write-Ahead Log (WAL) implementation for RustLite (internal implementation detail)"
keywords = ["database", "wal", "logging", "internal"]
categories = ["database"]

[dependencies]
rustlite-core = { path = "../rustlite-core", version = "0.2.1" }
crc32fast.workspace = true
bincode.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
